--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 pip
-setuptools
-pandas
-dash
+setuptools~=41.2.0
+pandas~=1.3.4
+dash~=2.1.0
 pytest
 dash-bootstrap-components
+selenium~=4.1.0
+plotly~=5.3.1
