--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ pip
 setuptools~=41.2.0
 pandas~=1.3.4
 dash~=2.1.0
-pytest
+pytest~=6.2.5
 dash-bootstrap-components
 selenium~=4.1.0
 plotly~=5.3.1
 dash[testing]
+numpy~=1.21.5
 #pystan~=2.19.1.1
 #prophet
