--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,59 @@
-pip
-setuptools~=41.2.0
-pandas~=1.3.4
-dash~=2.1.0
-pytest~=6.2.5
-dash-bootstrap-components
-selenium~=4.1.0
-plotly~=5.3.1
-dash[testing]
-numpy~=1.21.5
-#pystan~=2.19.1.1
-#prophet
+async-generator==1.10
+attrs==21.4.0
+beautifulsoup4==4.10.0
+Brotli==1.0.9
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.11
+click==8.0.3
+colorama==0.4.4
+configparser==5.2.0
+crayons==0.4.0
+cryptography==36.0.1
+dash==2.1.0
+dash-bootstrap-components==1.0.3
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+Flask==2.0.2
+Flask-Compress==1.10.1
+h11==0.13.0
+idna==3.3
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
+jsonschema==4.4.0
+lxml==4.7.1
+MarkupSafe==2.0.1
+numpy==1.22.2
+outcome==1.1.0
+packaging==21.3
+pandas==1.3.5
+percy==2.0.2
+plotly==5.3.1
+pluggy==1.0.0
+py==1.11.0
+pycparser==2.21
+pyOpenSSL==22.0.0
+pyparsing==3.0.7
+pyproject-toml==0.0.10
+pyrsistent==0.18.1
+pytest==7.0.0
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.27.1
+selenium==4.1.0
+six==1.16.0
+sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
+tenacity==8.0.1
+toml==0.10.2
+tomli==2.0.1
+trio==0.19.0
+trio-websocket==0.9.2
+urllib3==1.26.8
+waitress==2.0.0
+webdriver-manager==3.5.2
+Werkzeug==2.0.3
+wsproto==1.0.0
