--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ Jinja2==3.0.3
 jsonschema==4.4.0
 lxml==4.7.1
 MarkupSafe==2.0.1
-numpy==1.22.2
+numpy
 outcome==1.1.0
 packaging==21.3
 pandas==1.3.5
