--- a/requirements.txt
+++ b/requirements.txt
@@ -25,7 +25,7 @@ Jinja2==3.0.3
 jsonschema==4.4.0
 lxml==4.7.1
 MarkupSafe==2.0.1
-numpy
+numpy~=1.19.4
 outcome==1.1.0
 packaging==21.3
 pandas==1.3.5
@@ -63,3 +63,6 @@ flask_login
 Flask-SocketIO==4.3.1
 python-engineio==3.13.2
 python-socketio==4.6.0
+setuptools~=57.0.0
+SQLAlchemy~=1.4.34
+WTForms~=3.0.1
